# desafio-mailerweb-ino

./: .gitignore  .pre-commit-config.yaml  CHECKLIST_INTERNO.md  DESAFIO.md  Makefile  README.md  docker-compose.yml  flake8_comments.py  setup.cfg
backend/: .dockerignore  .env.example  .repomixignore  Dockerfile  pyproject.toml  repomix.config.json
backend/alembic/: env.py
backend/alembic/versions/: 2f4a7b8c9d10_remove_user_name.py  3a6f1d9c2b80_add_unique_email_delivery_source_event.py  5a1b2c3d4e5f_unique_email_delivery_event_recipient.py  665e322abcfa_add_constraints_enums_audit_fields_.py  7b9c1d2e3f40_add_booking_overlap_exclusion_constraint.py  8f3d2c1b4a90_create_email_deliveries.py  97bb3372bd01_add_booking_audit_fields.py  c1b7a9d42c55_add_user_role_for_auth.py  edd25d9ba2eb_create_initial_tables.py
backend/clean_ai_comments/: cleaner.py
backend/source/: main.py
backend/source/core/: config.py  create_db.py  database.py  migrations.py  security.py
backend/source/features/auth/: controller.py  dependencies.py  schemas.py  service.py
backend/source/features/bookings/: controller.py  notifications.py  schemas.py  service.py
backend/source/features/dashboard/: controller.py  schemas.py  service.py
backend/source/features/dev/: controller.py  mock_seed_data.py  mock_seed_service.py
backend/source/features/email_deliveries/: controller.py  schemas.py  service.py
backend/source/features/outbox/: constants.py  run_worker.py  service.py  worker_runtime.py
backend/source/features/rooms/: controller.py  schemas.py
backend/source/models/: __init__.py  booking.py  booking_participant.py  email_delivery.py  outbox_event.py  room.py  user.py
backend/tests/: conftest.py  test_auth.py  test_bookings.py  test_dashboard.py  test_dev_seed_email_deliveries.py  test_email_deliveries.py  test_health.py  test_model_constraints.py  test_outbox_worker.py  test_rooms.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  schema.ts
frontend/src/components/: AppSidebar.tsx  AppTopbar.tsx  AuthenticatedLayout.tsx  BookingsCalendarView.tsx  DateInput.tsx  ProtectedRoute.tsx  ThemeToggle.tsx  TimeInput.tsx  bookingsCalendarUtils.ts
frontend/src/docs/: ux-requirements.md
frontend/src/hooks/: authContext.ts  useAuth.tsx
frontend/src/pages/: BookingsPage.tsx  DashboardPage.tsx  EmailDeliveriesPage.tsx  LoginPage.tsx  RegisterPage.tsx  RoomsPage.tsx
frontend/src/services/: authService.ts  bookingService.ts  dashboardService.ts  emailDeliveryPresenter.ts  emailDeliveryService.ts  mockData.ts  mockUtils.ts  roomService.ts  serviceError.ts
frontend/src/test/: setup.ts
(+2 files in other folders)
