[project]
name = "backend"
version = "0.1.0"
description = "Sistema de reservas de salas com notificações assíncronas por e-mail utilizando o padrão Outbox"
authors = [
    {name = "mateusb12",email = "matbessa12@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pydantic (>=2.13.1,<3.0.0)",
    "repomix (>=0.5.0,<0.6.0)",
    "alembic (>=1.18.4,<2.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
